# nanoplm

./: .dockerignore  .gitignore  Dockerfile  Makefile  PRETRAINING_SETUP.md  README.md  analyze_opt_tasks.py  analyze_trace.py  analyze_trace_deep.py  distill.sh  docker-compose.yaml  docker-compose.yml  downstream_benchmark.py  dvc.yaml  log.txt  main.py  params.yaml  pretrain.sh  pretrain.yaml  pyproject.toml  run.sh  train.sh
.github/: CODEOWNERS
.github/workflows/: docker-build.yml  publish-to-pypi.yml
docs/: mhc_triton_kernels.md
scripts/: embed_gen.sbatch  shuffle_fasta.sbatch  single_gpu_training.sbatch  student_training.sbatch  student_training_multi_gpu.sbatch
src/data/: __init__.py  base.py  download.py  extract.py  params.yaml  pipeline.py  preprocess.py  split.py
src/distillation/: teacher_embed.py
src/models/: __init__.py  teacher.py
src/myplm/cli/: __init__.py  data.py  pretrain.py  train.py
src/myplm/config/: __init__.py
src/myplm/data/: __init__.py  dataset.py  downloader.py  extractor.py  filter_splitor.py  filterer.py  pipeline.py  shuffler.py  splitor.py
src/myplm/distillation/: __init__.py  callbacks.py  pipeline.py  pipeline_builder.py  session_manager.py
src/myplm/optim/: __init__.py
src/myplm/utils/: __init__.py  common.py  logger.py
src/nanoplm/cli/: __init__.py  data.py  distill.py  pretrain.py  train.py
src/nanoplm/data/: __init__.py  extractor.py  file_pool.py  filterer.py  manifest.py  native_fasta_ops.py  shuffler.py  splitor.py  validation.py
src/nanoplm/distillation/: __init__.py  callbacks.py  collator.py  dataset.py  pipeline.py  scheduler.py
src/nanoplm/pretraining/: __init__.py  collator.py  config.py  dataset.py  fp8.py  native_shard_writer.py  optim.py  pipeline.py  pretraining.py  pure_pipeline.py  sampler.py  te_pipeline.py  utils.py
src/nanoplm/utils/: __init__.py  common.py  wandb_artifacts.py
src/protx/: cli.py
src/protx/cli/: __init__.py  data.py  train.py
src/protx/config/: __init__.py  data_config.py  distill_config.py
src/protx/data/: __init__.py  base.py  config.py  dataset.py  download.py  downloader.py  extract.py  extractor.py  filter_splitor.py  params.yaml  pipeline.py  preprocess.py  shuffler.py
src/utils/: common.py
testing_for_pretrain/: pretrain.yaml
tests/: README.md  __init__.py  analyze_embedding.py  bench_mhc_lite.py  conftest.py  flash_attention_benchmark.py  mhc_triton_gridsearch.py  mhc_triton_kernels_benchmark.py  requirements.txt  shm_loading_benchmark.py  test_data_loading.py  test_embedding.py  test_fast_data_pipeline_ops.py  test_fasta_dataset.py  test_integration.py  test_mhc_lite_wrapping_level.py  test_mhc_triton_correctness.py  test_native_shard_writer.py  test_packing_collator.py  test_pretraining_collator.py  test_smoke.py  test_token_packing.py
(+53 files in other folders)
